creusot/tests/should_succeed/closures/03_generic_bound.coma
module M_03_generic_bound__closure_param [#"03_generic_bound.rs" 5 0 5 34]
  let%span s03_generic_bound0 = "03_generic_bound.rs" 6 8 6 9
  let%span s03_generic_bound1 = "03_generic_bound.rs" 5 29 5 30
  let%span sops2 = "../../../../creusot-contracts/src/std/ops.rs" 168 27 168 52
  let%span sops3 = "../../../../creusot-contracts/src/std/ops.rs" 169 26 169 60
  let%span sops4 = "../../../../creusot-contracts/src/std/ops.rs" 143 14 143 114
  let%span sops5 = "../../../../creusot-contracts/src/std/ops.rs" 148 14 148 101
  let%span sinvariant6 = "../../../../creusot-contracts/src/invariant.rs" 24 8 24 18
  let%span sops7 = "../../../../creusot-contracts/src/std/ops.rs" 109 15 109 59
  let%span sops8 = "../../../../creusot-contracts/src/std/ops.rs" 110 14 110 36
  let%span sops9 = "../../../../creusot-contracts/src/std/ops.rs" 115 14 115 31
  let%span sops10 = "../../../../creusot-contracts/src/std/ops.rs" 120 15 120 29
  let%span sops11 = "../../../../creusot-contracts/src/std/ops.rs" 121 15 121 26
  let%span sops12 = "../../../../creusot-contracts/src/std/ops.rs" 122 14 122 28
  let%span sops13 = "../../../../creusot-contracts/src/std/ops.rs" 127 14 128 105
  
  use prelude.int.UInt32
  
  type t_F'0
  
  predicate inv'0 (_1 : t_F'0)
  
  predicate invariant'0 (self : t_F'0) =
    [%#sinvariant6] inv'0 self
  
  predicate inv'1 (_1 : t_F'0)
  
  axiom inv_axiom'0 [@rewrite] : forall x : t_F'0 [inv'1 x] . inv'1 x = invariant'0 x
  
  predicate inv'2 (_1 : UInt32.t)
  
  axiom inv_axiom'1 [@rewrite] : forall x : UInt32.t [inv'2 x] . inv'2 x = true
  
  predicate precondition'0 (self : t_F'0) (args : UInt32.t)
  
  predicate inv'3 (_1 : ())
  
  axiom inv_axiom'2 [@rewrite] : forall x : () [inv'3 x] . inv'3 x = true
  
  predicate postcondition_once'0 (self : t_F'0) (args : UInt32.t) (result : ())
  
  predicate resolve'0 (_1 : t_F'0)
  
  predicate postcondition_mut'0 (self : t_F'0) (args : UInt32.t) (result_state : t_F'0) (result : ())
  
  function fn_mut_once'0 (self : t_F'0) (args : UInt32.t) (res : ()) : ()
  
  axiom fn_mut_once'0_spec : forall self : t_F'0, args : UInt32.t, res : () . [%#sops13] postcondition_once'0 self args res
  = (exists res_state : t_F'0 . postcondition_mut'0 self args res_state res /\ resolve'0 res_state)
  
  predicate unnest'0 (self : t_F'0) (_2 : t_F'0)
  
  function unnest_trans'0 (self : t_F'0) (b : t_F'0) (c : t_F'0) : ()
  
  axiom unnest_trans'0_spec : forall self : t_F'0, b : t_F'0, c : t_F'0 . ([%#sops10] unnest'0 self b)
   -> ([%#sops11] unnest'0 b c)  -> ([%#sops12] unnest'0 self c)
  
  function unnest_refl'0 (self : t_F'0) : ()
  
  axiom unnest_refl'0_spec : forall self : t_F'0 . [%#sops9] unnest'0 self self
  
  function postcondition_mut_unnest'0 (self : t_F'0) (args : UInt32.t) (res_state : t_F'0) (res : ()) : ()
  
  axiom postcondition_mut_unnest'0_spec : forall self : t_F'0, args : UInt32.t, res_state : t_F'0, res : () . ([%#sops7] postcondition_mut'0 self args res_state res)
   -> ([%#sops8] unnest'0 self res_state)
  
  predicate postcondition'0 (self : t_F'0) (args : UInt32.t) (result : ())
  
  function fn_once'0 (self : t_F'0) (args : UInt32.t) (res : ()) : ()
  
  axiom fn_once'0_spec : forall self : t_F'0, args : UInt32.t, res : () . [%#sops5] postcondition_once'0 self args res
  = (resolve'0 self /\ postcondition'0 self args res)
  
  function fn_mut'0 (self : t_F'0) (args : UInt32.t) (res_state : t_F'0) (res : ()) : ()
  
  axiom fn_mut'0_spec : forall self : t_F'0, args : UInt32.t, res_state : t_F'0, res : () . [%#sops4] postcondition_mut'0 self args res_state res
  = (self = res_state /\ postcondition'0 self args res)
  
  let rec call'0 (self:t_F'0) (args:UInt32.t) (return'  (ret:()))= {[@expl:call 'self' type invariant] inv'1 self}
    {[@expl:call 'args' type invariant] inv'2 args}
    {[@expl:call requires] [%#sops2] precondition'0 self args}
    any [ return' (result:())-> {inv'3 result} {[%#sops3] postcondition'0 self args result} (! return' {result}) ] 
  
  use prelude.prelude.Any
  
  meta "compute_max_steps" 1000000
  
  let rec closure_param'0[#"03_generic_bound.rs" 5 0 5 34] (f:t_F'0) (return'  (ret:()))= {[@expl:closure_param 'f' type invariant] [%#s03_generic_bound1] inv'0 f}
    (! bb0
    [ bb0 = s0
      [ s0 =  [ &_3 <- (([%#s03_generic_bound0] (0 : UInt32.t))) ] s1
      | s1 = call'0 {f} {_3} (fun (_ret':()) ->  [ &_0 <- _ret' ] s2)
      | s2 = bb1 ]
    
    | bb1 = s0 [ s0 = {[@expl:type invariant] inv'0 f} s1 | s1 = -{resolve'0 f}- s2 | s2 = bb2 ] 
    | bb2 = return' {_0} ]
    ) [ & _0 : () = Any.any_l () | & f : t_F'0 = f | & _3 : UInt32.t = Any.any_l () ] 
    [ return' (result:())-> (! return' {result}) ]

end
module M_03_generic_bound__caller [#"03_generic_bound.rs" 9 0 9 15]
  let%span s03_generic_bound0 = "03_generic_bound.rs" 5 29 5 30
  
  use prelude.prelude.Any
  
  use prelude.int.UInt32
  
  let rec closure0'0[#"03_generic_bound.rs" 10 18 10 27] [@coma:extspec] (_1:()) (_x:UInt32.t) (return'  (ret:()))= bb0
    [ bb0 = return' {_0} ]
     [ & _0 : () = Any.any_l () ]  [ return' (result:())-> return' {result} ] 
  
  predicate inv'0 (_1 : ())
  
  axiom inv_axiom'0 [@rewrite] : forall x : () [inv'0 x] . inv'0 x = true
  
  let rec closure_param'0 (f:()) (return'  (ret:()))= {[@expl:closure_param 'f' type invariant] [%#s03_generic_bound0] inv'0 f}
    any [ return' (result:())-> (! return' {result}) ] 
  
  meta "compute_max_steps" 1000000
  
  let rec caller'0[#"03_generic_bound.rs" 9 0 9 15] (_1:()) (return'  (ret:()))= (! bb0
    [ bb0 = s0
      [ s0 =  [ &_1 <- () ] s1 | s1 = closure_param'0 {_1} (fun (_ret':()) ->  [ &_0 <- _ret' ] s2) | s2 = bb1 ]
    
    | bb1 = return' {_0} ]
    ) [ & _0 : () = Any.any_l () | & _1 : () = Any.any_l () ]  [ return' (result:())-> (! return' {result}) ] 
end
